[gd_scene load_steps=17 format=2]

[ext_resource path="res://Font/Lato/Lato-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Sprites/PLayer/Background.png" type="Texture" id=2]
[ext_resource path="res://Sprites/PLayer/Easter_King_Idle_Sprite2.png" type="Texture" id=3]
[ext_resource path="res://Sprites/PLayer/Easter_King_Idle_Sprite1.png" type="Texture" id=4]
[ext_resource path="res://MainMenu.gd" type="Script" id=5]
[ext_resource path="res://Sprites/PLayer/easter_king_teleport2.png" type="Texture" id=6]
[ext_resource path="res://Sprites/PLayer/easter_king_teleport5.png" type="Texture" id=7]
[ext_resource path="res://Sprites/PLayer/easter_king_teleport3.png" type="Texture" id=8]
[ext_resource path="res://Sprites/PLayer/easter_king_teleport6.png" type="Texture" id=9]
[ext_resource path="res://Sprites/PLayer/easter_king_teleport1.png" type="Texture" id=10]
[ext_resource path="res://Sprites/PLayer/easter_king_teleport4.png" type="Texture" id=11]
[ext_resource path="res://Music/Easter King PlayTheme EDIT.wav" type="AudioStream" id=12]

[sub_resource type="DynamicFont" id=1]
size = 25
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=3]
default_font = SubResource( 2 )
Button/icons/ = null

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 10 ), ExtResource( 6 ), ExtResource( 8 ), ExtResource( 11 ), ExtResource( 7 ), ExtResource( 9 ), null ],
"loop": true,
"name": "Teleport",
"speed": 5.0
} ]

[node name="MainMenu" type="Node2D"]
script = ExtResource( 5 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Title" type="Label" parent="CanvasLayer"]
anchor_right = 1.0
margin_top = 20.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 1 )
text = "Easter King"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Highscore" type="Label" parent="CanvasLayer"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -600.0
margin_bottom = 31.0
custom_fonts/font = SubResource( 1 )
text = "Highscore:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TotalEggs" type="Label" parent="CanvasLayer"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -600.0
margin_top = 320.0
margin_bottom = 351.0
custom_fonts/font = SubResource( 1 )
text = "Total Eggs Collected:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="Button" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -44.0
margin_top = -12.0
margin_right = 36.0
margin_bottom = 18.0
theme = SubResource( 3 )
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 298, 178 )
scale = Vector2( 2.01333, 2.02222 )
texture = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 488, 160 )
scale = Vector2( 3, 3 )
frames = SubResource( 4 )
frame = 1
playing = true
flip_h = true

[node name="TeleportTimer" type="Timer" parent="."]
wait_time = 1.4

[node name="BackgroundMusic" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 12 )
[connection signal="pressed" from="CanvasLayer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="timeout" from="TeleportTimer" to="." method="_on_TeleportTimer_timeout"]
[connection signal="finished" from="BackgroundMusic" to="." method="_on_BackgroundMusic_finished"]
